[gd_scene load_steps=7 format=3 uid="uid://bfh72yk8mclw8"]

[ext_resource type="Script" uid="uid://dqamnmf6cbsrw" path="res://linear_regression.gd" id="1_afmgx"]
[ext_resource type="Shader" uid="uid://bb0b3n3e7jaf3" path="res://linearRegression.gdshader" id="2_65gvv"]
[ext_resource type="PackedScene" uid="uid://dlwq4kmdb3bhs" path="res://addons/easy_charts/control_charts/chart.tscn" id="2_kynnl"]
[ext_resource type="Theme" uid="uid://cvevndji4t07j" path="res://scenes/ui/game_ui_theme.tres" id="3_2n2jw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7uhed"]
shader = ExtResource("2_65gvv")
shader_parameter/blur_amount = 1.29
shader_parameter/mix_amount = 0.625
shader_parameter/color_over = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_65gvv"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="LinearRegression" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_afmgx")

[node name="PanelContainer" type="PanelContainer" parent="."]
material = SubResource("ShaderMaterial_7uhed")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("3_2n2jw")

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer2"]
layout_mode = 2
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("3_2n2jw")
theme_type_variation = &"pcz1"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer2/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "PREDICTION"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Labels" type="VBoxContainer" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Labels"]
visible = false
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Labels/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_2n2jw")
text = "Add point"

[node name="x" type="TextEdit" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Labels/VBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "X Value"

[node name="y" type="TextEdit" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Labels/VBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "Y Value"

[node name="Currently planted" type="Label" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Labels"]
layout_mode = 2
text = "Currently planted:"

[node name="loss profit" type="Label" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Labels"]
layout_mode = 2
text = "loss profit:"

[node name="Rainfalls" type="Label" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Labels"]
layout_mode = 2
text = "Rainfalls:"

[node name="Crop Loss" type="Label" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Labels"]
layout_mode = 2
text = "Crop Loss:"

[node name="Profit" type="Label" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Labels"]
layout_mode = 2
text = "Base Profit:"

[node name="Debt" type="Label" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Labels"]
layout_mode = 2
text = "Debt:"

[node name="Total" type="Label" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Labels"]
layout_mode = 2
text = "Predicted profit:"

[node name="Datas" type="VBoxContainer" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="currentlyPlanted" type="Label" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Datas"]
layout_mode = 2
text = "12"

[node name="lossProfit" type="Label" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Datas"]
layout_mode = 2
text = "32"

[node name="rainfalls" type="Label" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Datas"]
layout_mode = 2
text = "43"

[node name="cropLoss" type="Label" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Datas"]
layout_mode = 2
text = "43"

[node name="profits" type="Label" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Datas"]
layout_mode = 2
text = "12"

[node name="debt" type="Label" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Datas"]
layout_mode = 2
text = "500"

[node name="total" type="Label" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Datas"]
layout_mode = 2
text = "321"

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_65gvv")
text = "Done"

[node name="Chart" parent="PanelContainer/MarginContainer/PanelContainer/MarginContainer2/HBoxContainer" instance=ExtResource("2_kynnl")]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2

[connection signal="pressed" from="PanelContainer/MarginContainer/PanelContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Labels/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/PanelContainer/MarginContainer2/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
